@@ -1,3 +1,9 @@
+2012-01-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/stm8/ralloc2.cc:
+	  Register allocation infrastructure for the stm8 port.
+
 2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* support/scripts/mcs51-disasm: More informations from map file.
